Size may not be divisible by scale for cursor images
Downstream issue: https://github.com/swaywm/sway/issues/6014
On outputs whose scale is 2, users of libwayland create a wl_cursor_theme
with the size preferred_size * scale
. However, internally libwayland may pick a different buffer size depending on the cursor theme (see _XcursorFindBestSize
). In particular, the resulting "best size" may be odd.
In the issue, a user reports that 3 different clients using libwayland-cursor create a 9x16 buffer for the cursor surface, then set the surface scale to 2.
I'm not sure what's the best way to handle this.
Ref !65 (merged)